--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
   "private": true,
   "dependencies": {
     "@ant-design/icons": "^5.2.6",
+    "@firebase/app-compat": "^0.2.20",
+    "@firebase/messaging-compat": "^0.2.4",
     "@metamask/sdk-react": "^0.8.0",
     "@novu/notification-center": "^0.19.0",
     "@testing-library/jest-dom": "^5.14.1",
@@ -15,7 +17,7 @@
     "@types/react-dom": "^18.0.0",
     "antd": "^5.9.4",
     "axios": "^1.5.1",
-    "firebase": "^10.4.0",
+    "firebase": "^10.5.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.16.0",
